# yazlab-II-proje-I

./: .env  PLANLANAN_KLASÖR_YAPISI  README.md  constants.py  docker-compose.yml  envconfig_and_settings.py  k6-result.txt  load-test.js  pyproject.toml
auth-service/tests/: conftest.py  test_auth_service.py
dispatcher/app/: dispatcher_services.py  logic.py  main.py
dispatcher/tests/: conftest.py  test_auth.py  test_enrichment.py
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
services/auth_service/: Dockerfile  config.py  requirements.txt
services/auth_service/app/: database.py  logic.py  main.py  pydantic_models.py  redis_client.py
services/auth_service/tests/: conftest.py  test_auth_service.py
services/book_service/: Dockerfile  requirements.txt
services/book_service/app/: database.py  main.py  models.py
services/borrow_service/: Dockerfile  config.py  requirements.txt
services/borrow_service/app/: database.py  logic.py  main.py
services/dispatcher/: Dockerfile  config.py  requirements.txt
services/dispatcher/app/: dispatcher_services.py  logic.py  main.py  redis_client.py
services/dispatcher/tests/: conftest.py  test_auth.py  test_enrichment.py
yazlab_II_proje_I.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
