#Buradaki dosya python projelerinde genel olarak kullanılan isim versiyon açıklama bağımlılıklar
#gibi bilgilerin yer aldığı dosyadır
# yeni bağımlılık eklerken dependencies kısmına bağımlılığın ismini yazıp
# örn "pytest" konsola uv pip install . diyerek ekleyebilirsin

[project]
name = "yazlab-II-proje-I"
version = "0.1.0"
description = "Yazlab 2 proje 1 dosyaları"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # test frameworkü
    "pytest",

    # ana backend frameworkümüz
    "fastapi",

    #fastapi.testcliend yani starlette.testclient için gerekli paket
    "httpx",

    #test için mikroservisi taklid edicek paket
    "respx",

    #çevresel değişkenleri yüklemek için
    "dotenv",

    #ram de tutulan hızlı veritabanı kütüphanesi
    "redis",

    #mongodb için object document mapper
    "beanie",

    #mongodb asenkron sürücüsü kısaca veritabanı motoru
    "motor",





]