#Buradaki dosya python projelerinde genel olarak kullanılan isim versiyon açıklama bağımlılıklar
#gibi bilgilerin yer aldığı dosyadır
# yeni bağımlılık eklerken dependencies kısmına bağımlılığın ismini yazıp
# örn "pytest" konsola uv pip install . diyerek ekleyebilirsin

[project]
name = "yazlab-II-proje-I"
version = "0.1.0"
description = "Yazlab 2 proje 1 dosyaları"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # test frameworkü
    "pytest",

    #asenkron testler için framework
    "pytest-asyncio",

    # ana backend frameworkümüz
    "fastapi",

    #fastapi.testcliend yani starlette.testclient için gerekli paket
    "httpx",

    #test için mikroservisi taklid edicek paket
    "respx",

    #çevresel değişkenleri yüklemek için
    "dotenv",

    #ram de tutulan hızlı veritabanı kütüphanesi
    "redis",

    #mongodb için object document mapper
    "beanie==2.1.0",

    #mongodb asenkron sürücüsü kısaca veritabanı motoru
    #artık pymongo nun native veritbanı motorunu kullanıyorum
    #"motor==3.3.2",

    #mongodb için async mock yapabileceğim paket
    "mongomock-motor",
    "pyjwt"

]
# asenkron testleri dekoratörle belirtmeden otomatik algılatan yapı
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"